# grafos

./: .gitignore  README.md  copilot-instructions.md
.github/: DEVELOPMENT.md  copilot-instructions.md
api/: .pre-commit-config.yaml  pyproject.toml
api/src/graph_api/: __init__.py  database.py  main.py
docs/: DEVELOPMENT.md
resenha/: main.tex
resenha/core/: header.tex  metadata.tex  setup.tex
